--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,15 @@
 		<div id="side">
 			<ul>
 				<li><a href="/">Home_Store</a></li>
-				<li><%= link_to "MyCart", cart_path(1) %></li>
+				<li><%= link_to "MyCart", Cart.last %></li>
 				<li><a href="http://www..../news">News</a></li>
 				<li><a href="http://www..../contact">Contact</a></li>
 			</ul>
+			<% if @cart %>
+			<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+			     <%= render @cart %>
+			<% end %>
+			<% end %>
 		</div>
 		<div id="main">
 			<%= yield %>
