--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,6 +117,6 @@
  									display: none
  								}
  						
- 						    .orders input[type="submit"]:first-child{
+ 						    .orders .checkout{
  						    	display: none
  						    }
