--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -120,3 +120,7 @@
  						    .orders .checkout{
  						    	display: none
  						    }
+
+ 						    .logged{
+ 						    	color: yellow;
+ 						    }
