--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,33 @@
 		<%= @page_title || "Pragmatic Bookshelf" %>
 	</div>
 	<div id="columns">
+		
+
 		<div id="side">
 			<ul>
 				<li><a href="/">Home_Store</a></li>
 				<li><%= link_to "MyCart", Cart.last %></li>
-				<li><a href="http://www..../news">News</a></li>
-				<li><a href="http://www..../contact">Contact</a></li>
+				<% unless session[:user_id] %>
+				    <li><%= link_to "Register", new_user_path %></li>
+				    <li><a href="/login">Log in</a></li>
+			    <% else %>
+				    <li><%= link_to "Log Out", logout_path, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+                <% end %>
+                
+				
 			</ul>
+            <% if session[:user_id] %>
+                <ul>
+					<li><%= link_to 'Orders', orders_path%></li>
+					<li><%= link_to 'Products', products_path %></li>
+					<li><%= link_to 'Users', users_path %></li>
+				</ul>
+					<%= button_to 'Logout', logout_path, method: :delete %>
+			<% end %>
+
+			<% if session[:user_id] %>
+		        <p class="logged"> Logged with <%= session[:user_id] %> </p>
+		    <% end %>
 			<% if @cart %>
 			<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
 			     <%= render @cart %>
