--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,117 +14,114 @@
  *= require_self
  */
  #banner {
- 	background: #9c9;
- 	padding: 10px;
- 	border-bottom: 2px solid;
- 	font: small-caps 40px/40px "Times New Roman", serif;
- 	color: #282;
- 	text-align: center;
+background: #9c9;
+padding: 10px;
+border-bottom: 2px solid;
+font: small-caps 40px/40px "Times New Roman", serif;
+color: #282;
+text-align: center;
+}
+#banner img {
+float: left;
+}
+#notice {
+color: #000 !important;
+border: 2px solid red;
+padding: 1em;
+margin-bottom: 2em;
+background-color: #f0f0f0;
+font: bold smaller sans-serif;
+}
+#columns {
+/*background: #141;*/
+display: table;
+}
+#main{
+/*margin-left: 17em;*/
+padding: 1em;
+background: white;
+float:left;
+}
+#side {
+float: left;
+padding: 1em 2em;
+width: 13em;
+background: #141;
+}
+#side	ul {
+padding: 0;}
+#side	li {
+list-style: none;}
+#side	a {
+color: #bfb;
 
- }
- #banner 	img {
- 	float: left;
- }
-
-
- #notice {
- 	color: #000 !important;
- 	border: 2px solid red;
- 	padding: 1em;
- 	margin-bottom: 2em;
- 	background-color: #f0f0f0;
- 	font: bold smaller sans-serif;
- }
- #columns {
- 	/*background: #141;*/
- 	display: table;
- }
- #main{
- 	/*margin-left: 17em;*/
- 	padding: 1em;
- 	background: white;
- 	float:left;
- }
- #side {
- 	float: left;
- 	padding: 1em 2em;
- 	width: 13em;
- 	background: #141;
-
- }
- #side	ul {
- 	padding: 0;}
- 	#side	li {
- 		list-style: none;}
- 		#side		a {
- 			color: #bfb;
- 			font-size: small;
- 		}
-
-
- 		/*form, div {
- 			display: inline;
- 		}
- 		input {
- 			font-size: small;
- 			}*/
- 			#cart {
- 				font-size: smaller;
- 				color: white;}
- 				#cart	table {
- 					border-top:
- 					1px dotted #595;
- 					border-bottom: 1px dotted #595;
- 					margin-bottom: 10px;
- 				}
- 				#cart	ul {
- 					padding: 0;}
- 					#cart	li {
- 						list-style: none;}
- 						#cart	a {
- 							color: #bfb;
- 							font-size: small;
- 						}
-
-
-
- 						.depot_form 
- 						fieldset {
- 							background: #efe;}
- 							.depot_form  legend {
- 								color: #dfd;
- 								background: #141;
- 								font-family: sans-serif;
- 								padding: 0.2em 1em;
- 							}
- 							
- 							
- 							form	label {
- 									width: 5em;
- 									float: left;
- 									text-align: right;
- 									padding-top: 0.2em;
- 									margin-right: 0.1em;
- 									display: block;
- 								}
- 							form	select, textarea, input {
- 									margin-left: 0.5em;
- 								}
- 							form	.submit {
- 									margin-left: 4em;
- 								}
- 							form	br {
- 									display: none
- 								}
- 						
- 						    .orders .checkout{
- 						    	display: none
- 						    }
-
- 						    .logged{
- 						    	color: yellow;
- 						    }
+}
+/*form, div {
+display: inline;
+}
+input {
+font-size: small;
+}*/
+#cart {
+font-size: smaller;
+color: white;}
+#cart	table {
+border-top:
+1px dotted #595;
+border-bottom: 1px dotted #595;
+margin-bottom: 10px;
+}
+#cart	ul {
+padding: 0;}
+#cart	li {
+list-style: none;}
+#cart	a {
+color: #bfb;
+font-size: small;
+}
+.depot_form
+fieldset {
+background: #efe;}
+.depot_form legend {
+color: #dfd;
+background: #141;
+font-family: sans-serif;
+padding: 0.2em 1em;
+}
+form	label {
+width: 5em;
+float: left;
+text-align: right;
+padding-top: 0.2em;
+margin-right: 0.1em;
+display: block;
+}
+form	select, textarea, input {
+margin-left: 0.5em;
+}
+form	.submit {
+margin-left: 4em;
+}
+form	br {
+display: none
+}
+.orders .checkout{
+display: none
+}
+.logged{
+color: yellow;
+}
 .locale {
 float: right;
 margin: -0.25em 0.1em;
 }
+ 					a{
+ 						text-decoration: none;
+ 						font-size: 15px;
+ 						margin-top:10px;
+ 					}
+
+ 					li{
+ 						margin-top:6px;
+
+ 					}
