--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -16,4 +16,11 @@
 	</div>
 	<% end %>
 	<% end %>
-	<% end %>
+	
+
+	<% content_for(:footer) do %>
+       <p style="text-align: center; font-weight: 600;">
+           Footer defined it's the second placeholder (  Watch content_for in store#index view )
+       </p>
+    <% end %>
+<% end %>
