--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,8 @@
+
 <h1>Listing products</h1>
+<% if flash[:notice] %>
+<p id="notice"><%= notice %></p>
+<% end %>
 <table>
   <% @products.each do |product| %>
   <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
