--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.left-profile div{
+	width: 150px;
+	//height: 300px;
+}
+img{
+	max-width: 100%;
+}
+.profileimage{
+	color: #6B78B4;
+	font-size: 600; 
+    font-family: verdana,arial,helvetica,sans-serif;
+	font-size: 20px;
+	line-height: 23px;
+}
